--- a/shivSankalp/index.html
+++ b/shivSankalp/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-    
+      
     <title>Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation</title>
 
     <!-- SEO Meta Tags -->
@@ -20,7 +20,8 @@
     <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your URL -->
 
     <!-- Favicon (Optional) -->
-    <!-- <link rel="icon" type="image/png" href="/Images/favicon.png"> -->
+    <link rel="icon" type="image/png" href="/Images/favi_shiv.jpg">
+    <!-- <link rel="icon" href="/Images/favi_shiv.jpg" type="image/x-icon"> -->
   </head>
   <body>
     <div id="root"></div>
