Added preview thumbnail

--- a/shivSankalp/index.html
+++ b/shivSankalp/index.html
@@ -15,9 +15,10 @@
     <!-- Open Graph Meta for Social Sharing -->
     <meta property="og:title" content="Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation">
     <meta property="og:description" content="Contribute to Sambhaji Maharaj Jayanti small program on 14th May 2025. Your support matters.">
-    <meta property="og:image" content="/Images/banner.png"> <!-- Replace with your image path -->
+    <meta property="og:image" content="https://omshrishivsankalp.netlify.app/Images/banner.png" />
+    <!-- Replace with your image path -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://yourwebsite.com"> <!-- Replace with your URL -->
+    <meta property="og:url" content="https://omshrishivsankalp.netlify.app/"> <!-- Replace with your URL -->
 
     <!-- Favicon (Optional) -->
     <link rel="icon" type="image/png" href="/Images/favi_shiv.jpg">
