--- a/shivSankalp/index.html
+++ b/shivSankalp/index.html
@@ -17,6 +17,9 @@
     <meta property="og:description" content="Contribute to Sambhaji Maharaj Jayanti small program on 14th May 2025. Your support matters.">
     <meta property="og:image" content="https://omshrishivsankalp.netlify.app/Images/banner.png" />
     <!-- Replace with your image path -->
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://omshrishivsankalp.netlify.app/"> <!-- Replace with your URL -->
 
