Update index.html 2

--- a/shivSankalp/index.html
+++ b/shivSankalp/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 
-      
     <title>Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation</title>
 
     <!-- SEO Meta Tags -->
@@ -12,24 +11,26 @@
     <meta name="keywords" content="Sambhaji Maharaj Jayanti, Shiv Sankalp, Donation, Marathi Program, 14th May 2025, NGO, Support, Cultural Event">
     <meta name="author" content="Om Shri Shiv Sankalp Team">
 
-    <!-- Open Graph Meta for Social Sharing -->
+    <!-- Open Graph Meta for Social Sharing (Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation">
-    <meta property="og:description" content="Contribute to Sambhaji Maharaj Jayanti small program on 14th May 2025. Your support matters.">
+    <meta property="og:description" content="Contribute to Sambhaji Maharaj Jayanti's small program on 14th May 2025. Your support matters.">
     <meta property="og:image" content="https://omshrishivsankalp.netlify.app/Images/banner.png" />
-    <!-- Replace with your image path -->
     <meta property="og:image:width" content="1200">
     <meta property="og:image:height" content="630">
-    
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://omshrishivsankalp.netlify.app/"> <!-- Replace with your URL -->
+    <meta property="og:url" content="https://omshrishivsankalp.netlify.app/">
 
-    <!-- Favicon (Optional) -->
+    <!-- Twitter Card Meta (for Twitter preview) -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation">
+    <meta name="twitter:description" content="Contribute to Sambhaji Maharaj Jayanti's small program on 14th May 2025. Your support matters.">
+    <meta name="twitter:image" content="https://omshrishivsankalp.netlify.app/Images/banner.png">
+
+    <!-- Favicon -->
     <link rel="icon" type="image/png" href="/Images/favi_shiv.jpg">
-    <!-- <link rel="icon" href="/Images/favi_shiv.jpg" type="image/x-icon"> -->
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
-``
