--- a/shivSankalp/index.html
+++ b/shivSankalp/index.html
@@ -14,7 +14,7 @@
     <!-- Open Graph Meta for Social Sharing (Facebook, LinkedIn, etc.) -->
     <meta property="og:title" content="Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation">
     <meta property="og:description" content="Contribute to Sambhaji Maharaj Jayanti's small program on 14th May 2025. Your support matters.">
-    <meta property="og:image" content="https://omshrishivsankalp.netlify.app/Images/banner.png" />
+    <meta property="og:image" content="https://omshrishivsankalp.netlify.app/Images/banner.jpg" />
     <meta property="og:image:width" content="1923">
     <meta property="og:image:height" content="1080">
     <meta property="og:type" content="website">
@@ -24,7 +24,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Om Shri Shiv Sankalp - Sambhaji Maharaj Jayanti Donation">
     <meta name="twitter:description" content="Contribute to Sambhaji Maharaj Jayanti's small program on 14th May 2025. Your support matters.">
-    <meta name="twitter:image" content="https://omshrishivsankalp.netlify.app/Images/banner.png">
+    <meta name="twitter:image" content="https://omshrishivsankalp.netlify.app/Images/banner.jpg">
 
     <!-- Favicon -->
     <link rel="icon" type="image/png" href="/Images/favi_shiv.jpg">
